tests/queryApiCollection/invalidRequests/folder.bru
meta {
  name: Invalid Requests
}

auth {
  mode: none
}
